# See: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
# PEP 660 – Editable installs for pyproject.toml based builds (wheel based)
# Requires: setuptools>=64
requires = [
    "setuptools>=64",
]
build-backend = "setuptools.build_meta"

[project]
name = "tool_box"
authors = [
    {name = "Gael Colas"},
]
description = "Collections of tools to automate my life"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []
version = "0.0.1"

[project.optional-dependencies]
yt-dl = [
    "tinytag",
    # PyPi package is outdated, use executable instead
    # See: https://github.com/ytdl-org/youtube-dl/releases/tag/2021.12.17
    # "youtube-dl",
]
all = ["tool_box[yt-dl]"]

[project.scripts]
yt-dl = "tool_box.youtube_download.main:main"

[project.urls]
homepage = "https://github.com/ColasGael/tool_box"
