# See: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
# PEP 660 – Editable installs for pyproject.toml based builds (wheel based)
# Requires: setuptools>=64
requires = [
    "setuptools>=64",
]
build-backend = "setuptools.build_meta"

[project]
name = "tool_box"
authors = [
    {name = "Gael Colas"},
]
description = "Collections of tools to automate my life"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []
version = "0.0.1"

[project.optional-dependencies]
yt-dl = [
    "tinytag",
    # PyPi package is outdated, use executable instead
    # See: https://github.com/ytdl-org/youtube-dl/releases/tag/2021.12.17
    # "youtube-dl",
]
concert-planner = [
    "google-auth-httplib2",
    "google-auth-oauthlib",
    # See: https://github.com/googleapis/google-api-python-client
    "google-api-python-client",
]
commute-heat-map = [
    "matplotlib",
    "numpy",
    "pyproj",
    "scipy",
]
all = ["tool_box[yt-dl,concert-planner,commute-heat-map]"]

[project.scripts]
yt-dl = "tool_box.youtube_download.main:main"
concert-planner = "tool_box.concert_planner.main:main"
commute-heat-map = "tool_box.commute_heat_map.main:main"

[project.urls]
homepage = "https://github.com/ColasGael/tool_box"
